# Swarm_attack

./: readme.md  run.sh  upload-bs.py  upload-single.bat
_Swarm_Attack/: PX4MavCtrlV4.py  Python38Run.bat  RflyVisionAPI2_bs.py  SITL_swam_oldfactor.bat  ScreenCapApiV4.py  ScreenCapApiV4_bs.py  _add_obj.py  _mav_reboot.py  img_client.py  img_client_NXx2.py  img_client_multi.py  img_save2mp4.py  oldfactory_HITL.bat  oldfactory_HITLRunCom.bat  oldfactory_HITL_NUCx6.bat  oldfactory_HITL_NXx2.bat  oldfactory_SITL_bs.bat
_Swarm_Attack_bs/: multi_img_client.py  multi_img_client_NX.py  oldfactory_HITL.bat  oldfactory_SITL.bat
_Tools/: ScreenCapApiV4_bs.py  test_obj.py
bs_assis/: CMakeLists.txt  package.xml
bs_assis/launch/: bs_dds.launch
bs_assis/src/: BS_InfoPS.cxx  BS_InfoPS.h  MavData.cxx  MavData.h  MavData.idl  MavDataPubSubTypes.cxx  MavDataPubSubTypes.h  mavpv_node.cpp
common/include/: message_utils.h
common/msgs/: CMakeLists.txt
decision/launch/: 2_drone_bs.launch  bias_bs.launch  bs_test.launch  bs_test_4.launch  drone.launch  drone_bs.launch  multi_drone_bs.launch
decision/scenarios/: play_2drones.json
decision/scripts/: multi_drone.py  origin_bias.py  play_scenarios.py
main/launch/: 12_drone.launch  2_drone.launch  2_drone_bs.launch  4_drone.launch  4_drone_bs.launch
main/shell/: 12_drone.sh  4_drone_bs.sh  6_drone.sh
rflysim_ros_pkg/: CMakeLists.txt  package.xml  readme.md
rflysim_ros_pkg/launch/: cameras.launch  multi_mavros.launch  obj.launch  stereo.launch
rflysim_ros_pkg/msg/: Obj.msg
rflysim_ros_pkg/script/: Rflysim_obj.py  Rflysim_objwithsize.py  send_test.py
rflysim_ros_pkg/src/: image_receive.cpp
rflysimindoorcontroller_r2018b_n12_v9/: RflysimIndoorController_r2018b_N12_V9.cpp  RflysimIndoorController_r2018b_N12_V9.h  RflysimIndoorController_r2018b_N12_V9_data.cpp  RflysimIndoorController_r2018b_N12_V9_private.h  RflysimIndoorController_r2018b_N12_V9_types.h  ert_main.cpp  package.xml  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
shape_detection/: CMakeLists.txt  package.xml
shape_detection/config/: camera_param.yaml  camera_param_gazebo_monocular.yaml
shape_detection/cpp_nodes/: ellipse_det.cpp
shape_detection/launch/: ellipse_det.launch  obj_det.launch
shape_detection/src/darknet_lib/src/: image.c
shape_detection/src/darknet_ros/config/: ros.yaml  yolov3-tiny-obj.yaml  yolov3-tiny.yaml  yolov3.yaml
shape_detection/src/darknet_ros/yolo_network_config/cfg/: yolov3-tiny-obj.cfg
visualization/launch/: multi_visual_bs.launch  visual_launch.launch
visualization/scripts/: visual_pipe_plus.py
